--- a/videos.html
+++ b/videos.html
@@ -88,19 +88,19 @@ footer {
 </head>
 <body>
 
-<h1>📹 POXIMAMENTE VIDEOS DISPONIBLES.</h1>
+<h1>📹 video 1.</h1>
 
 <div class="contenido">
 
     <p style="font-size:1.3rem; text-align:center;">
-        No hay videos disponible.
+        Primera serie
     </p>
 
     <hr style="border:1px solid #00ff66; margin: 25px 0;">
 
     <!-- 🔥 EJEMPLO DE UN VIDEO (puedes duplicar este bloque) -->
     <div class="video-box">
-        <h2 class="section-title">📌 No disponible</h2>
+        <h2 class="section-title">📌 Mensaje a los jovenes</h2>
         <video src="Mensaje.mp4" controls></video>
     </div>
      <div class="video-box">
@@ -136,6 +136,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
