--- a/videos.html
+++ b/videos.html
@@ -88,7 +88,7 @@ footer {
 </head>
 <body>
 
-<h1>📹 video 1.</h1>
+<h1>📹 VIDEOS 📹</h1>
 
 <div class="contenido">
 
@@ -136,6 +136,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
