Update video entries and titles in videos.html

--- a/videos.html
+++ b/videos.html
@@ -88,7 +88,7 @@ footer {
 </head>
 <body>
 
-<h1>📹 VIDEOS 📹</h1>
+<h1>📹📌VIDEOS📌📹</h1>
 
 <div class="contenido">
 
@@ -100,22 +100,39 @@ footer {
 
     <!-- 🔥 EJEMPLO DE UN VIDEO (puedes duplicar este bloque) -->
     <div class="video-box">
-        <h2 class="section-title">📌 Mensaje a los jovenes</h2>
+        <h2 class="section-title">📌 Mensaje a los jovenes📌</h2>
         <video src="Mensaje.mp4" controls></video>
     </div>
      <div class="video-box">
+        <h2 class="section-title">📌El diezmo📌</h2>
+        <video src="El diezmo.mp4" controls></video>
+    </div>
+
+   <div class="video-box">
+        <h2 class="section-title">📌El matrimonio📌</h2>
+        <video src="El matrimonio.mp4" controls></video>
+    </div>
+   <div class="video-box">
+        <h2 class="section-title">📌Mensaje a los hijos📌</h2>
+        <video src="Las madres.mp4" controls></video>
+    </div>
+   <div class="video-box">
+        <h2 class="section-title">📌La Salvacion se pierde📌</h2>
+        <video src="Predicacion 2.mp4" controls></video>
+    </div>
+    <div class="video-box">
+        <h2 class="section-title">📌 Amigos del mundo📌</h2>
+        <video src="ejemplo.mp4" controls></video>
+    </div>
+    <div class="video-box">
+        <h2 class="section-title">📌 Corazon de niño📌</h2>
+        <video src="Corazon de niño.mp4" controls></video>
+    </div>
+   <div class="video-box">
         <h2 class="section-title">📌 No disponible</h2>
         <video src="ejemplo.mp4" controls></video>
     </div>
 
-   <div class="video-box">
-        <h2 class="section-title">📌 No disponible</h2>
-        <video src="ejemplo.mp4" controls></video>
-    </div>
-   <div class="video-box">
-        <h2 class="section-title">📌 No disponible</h2>
-        <video src="ejemplo.mp4" controls></video>
-    </div>
 
     <!-- PARA AGREGAR MÁS VIDEOS SOLO DUPLICA ESTO:
     <div class="video-box">
@@ -136,6 +153,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
