--- a/audios.html
+++ b/audios.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+   <!DOCTYPE html>
 <html lang="es">
 <head>
 <meta charset="UTF-8">
@@ -33,14 +33,13 @@ h1 {
     text-shadow: 0 0 20px gold;
 }
 
-/* ⬇⬇⬇ TITULO H2 RGB ANIMADO + BORDE NEÓN + ONDA ⬇⬇⬇ */
- h2 {
+/* ⬇⬇⬇ TITULO H2 RGB ANIMADO ⬇⬇⬇ */
+h2 {
     font-size: 1.3rem;
     text-align: center;
     font-weight: bold;
     margin-top: 25px;
 
-    /* Texto arcoiris animado */
     background: linear-gradient(90deg,
         red, orange, yellow, green, cyan, blue, violet, red
     );
@@ -56,7 +55,6 @@ h1 {
     50% {background-position: 100% 50%;}
     100% {background-position: 0% 50%;}
 }
-
 
 h2::before {
     content: "";
@@ -77,25 +75,10 @@ h2::before {
     z-index: -1;
 }
 
-/* Animación del texto */
-@keyframes rgbText {
-    0% {background-position: 0% 50%;}
-    50% {background-position: 100% 50%;}
-    100% {background-position: 0% 50%;}
-}
-
-/* Animación del borde */
 @keyframes rgbBorder {
     0% {background-position: 0% 50%;}
     50% {background-position: 100% 50%;}
     100% {background-position: 0% 50%;}
-}
-
-/* Efecto de onda luminosa */
-@keyframes glowPulse {
-    0%   { filter: drop-shadow(0 0 4px #fff); }
-    50%  { filter: drop-shadow(0 0 14px #fff); }
-    100% { filter: drop-shadow(0 0 4px #fff); }
 }
 /* ⬆⬆⬆ FIN DEL ESTILO H2 RGB ANIMADO ⬆⬆⬆ */
 
@@ -120,6 +103,59 @@ audio {
     text-decoration: none;
     font-size: 1.4rem;
 }
+
+/* ⬇⬇⬇ LÍNEA HACKER RGB + TEXTO RGB ⬇⬇⬇ */
+
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
+.linea-hacker {
+    width: 100%;
+    height: 5px;
+    background: black;
+    position: relative;
+    overflow: hidden;
+    border-radius: 4px;
+    margin: 40px 0 15px 0;
+    box-shadow: 0 0 20px rgba(0,255,255,0.4);
+}
+
+.linea-hacker::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -30%;
+    width: 30%;
+    height: 100%;
+    background: linear-gradient(90deg,
+        rgba(0,255,255,0) 0%,
+        rgba(0,255,255,1) 50%,
+        rgba(0,255,255,0) 100%
+    );
+    animation: scan 1.3s linear infinite;
+}
+
+@keyframes scan {
+    0% { left: -30%; }
+    100% { left: 100%; }
+}
+
+.texto-hacker {
+    font-family: 'Share Tech Mono', monospace;
+    font-size: 26px;
+    font-weight: bold;
+    text-align: center;
+    letter-spacing: 3px;
+    animation: rgbtext2 2.2s linear infinite;
+}
+
+@keyframes rgbtext2 {
+    0% { color: #00ffff; text-shadow: 0 0 10px #00ffff; }
+    33% { color: #00ff00; text-shadow: 0 0 10px #00ff00; }
+    66% { color: #ff00ff; text-shadow: 0 0 10px #ff00ff; }
+    100% { color: #00ffff; text-shadow: 0 0 10px #00ffff; }
+}
+/* ⬆⬆⬆ FIN DEL EFECTO HACKER RGB ⬆⬆⬆ */
+
 </style>
 
 </head>
@@ -215,6 +251,48 @@ audio {
         </audio>
     </div>
 
+    <div class="audio-box">
+        <strong>Apocalipsis</strong>  
+        <audio controls>
+            <source src="DOS .mp3" type="audio/mpeg">
+        </audio>
+    </div>
+
+    <div class="audio-box">
+        <strong>Apocalipsis</strong>  
+        <audio controls>
+            <source src="DOS .mp3" type="audio/mpeg">
+        </audio>
+    </div>
+
+    <!-- ⬇⬇⬇ AQUI VA LA LÍNEA HACKER + TEXTO RGB (REMPLAZA EL HR) ⬇⬇⬇ -->
+    <div class="linea-hacker"></div>
+    <div class="texto-hacker">SEGUNDA TEMPORADA</div>
+    <!-- ⬆⬆⬆ FIN DEL BLOQUE HACKER ⬆⬆⬆ -->
+
+    <div class="audio-box">
+        <strong>Apocalipsis</strong>  
+        <audio controls>
+            <source src="DOS .mp3" type="audio/mpeg">
+        </audio>
+    </div>
+
+    <div class="audio-box">
+        <strong>Apocalipsis</strong>  
+        <audio controls>
+            <source src="DOS .mp3" type="audio/mpeg">
+        </audio>
+    </div>
+
+    <div class="audio-box">
+        <strong>Apocalipsis</strong>  
+        <audio controls>
+            <source src="DOS .mp3" type="audio/mpeg">
+        </audio>
+    </div>
+
+    <!-- Continua con tus audios... -->
+
     <div class="volver">
         <a href="index.html">⬅ Volver al inicio</a>
     </div>
@@ -223,4 +301,3 @@ audio {
 
 </body>
 </html>
-
