Refactor audios.html structure and content

--- a/audios.html
+++ b/audios.html
@@ -168,7 +168,7 @@ audio {
     También puedes descargar presionando los tres puntitos y eligiendo “descargar”.</h2>
 
     <div class="audio-box">
-        <strong>Testimonio de un joven.</strong> La Fe  
+        <strong>Testimonio de un joven.</strong>  
         <audio controls>
             <source src="testimonio.mp3" type="audio/mpeg">
         </audio>
@@ -254,14 +254,14 @@ audio {
     <div class="audio-box">
         <strong>Apocalipsis</strong>  
         <audio controls>
-            <source src="DOS .mp3" type="audio/mpeg">
+            <source src="27 la flor se cae.mp3" type="audio/mpeg">
         </audio>
     </div>
 
     <div class="audio-box">
         <strong>Apocalipsis</strong>  
         <audio controls>
-            <source src="DOS .mp3" type="audio/mpeg">
+            <source src="77 solo a ti cantare.mp3" type="audio/mpeg">
         </audio>
     </div>
 
@@ -273,23 +273,74 @@ audio {
     <div class="audio-box">
         <strong>Apocalipsis</strong>  
         <audio controls>
-            <source src="DOS .mp3" type="audio/mpeg">
+            <source src="Coros de fuego.mp3" type="audio/mpeg">
         </audio>
     </div>
 
     <div class="audio-box">
         <strong>Apocalipsis</strong>  
         <audio controls>
-            <source src="DOS .mp3" type="audio/mpeg">
+            <source src="Coros pentecostales.mp3" type="audio/mpeg">
         </audio>
     </div>
 
     <div class="audio-box">
         <strong>Apocalipsis</strong>  
         <audio controls>
-            <source src="DOS .mp3" type="audio/mpeg">
+            <source src="EL GENERAL.mp3" type="audio/mpeg">
         </audio>
     </div>
+   <div class="audio-box">
+        <strong>Apocalipsis</strong>  
+        <audio controls>
+            <source src="Esa_oveja_era_yo-Leonel_Tuchez_Letra_(128k).m4a" type="audio/mpeg">
+        </audio>
+    </div>
+
+   <div class="audio-box">
+        <strong>Apocalipsis</strong>  
+        <audio controls>
+            <source src="Lloro José.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+
+   <div class="audio-box">
+        <strong>Apocalipsis</strong>  
+        <audio controls>
+            <source src="Tan_Ciego_Caminas(128k)(1).m4a" type="audio/mpeg">
+        </audio>
+    </div>
+   <div class="linea-hacker"></div>
+    <div class="texto-hacker">TEXTOS BLIBLICOS</div>
+
+   <div class="audio-box">
+        <strong>Apocalipsis</strong>  
+        <audio controls>
+            <source src="Alabanza en el Cielo.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+
+   <div class="audio-box">
+        <strong>Apocalipsis</strong>  
+        <audio controls>
+            <source src="APOCALIPSIS 18.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+
+   <div class="audio-box">
+        <strong>Apocalipsis</strong>  
+        <audio controls>
+            <source src="El dia de mañana.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+
+   <div class="audio-box">
+        <strong>Apocalipsis</strong>  
+        <audio controls>
+            <source src="El milenio.mp3" type="audio/mpeg">
+        </audio>
+    </div>
+
 
     <!-- Continua con tus audios... -->
 
@@ -301,3 +352,4 @@ audio {
 
 </body>
 </html>
+
