Fix HTML encoding issues in videos.html

--- a/videos.html
+++ b/videos.html
@@ -122,7 +122,7 @@ footer {
     </div>
     <div class="video-box">
         <h2 class="section-title">📌 Amigos del mundo📌</h2>
-        <video src="ejemplo.mp4" controls></video>
+        <video src="predicacion 3.mp4" controls></video>
     </div>
     <div class="video-box">
         <h2 class="section-title">📌 Corazon de niño📌</h2>
@@ -153,6 +153,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
