Restore audios.html with original content

--- a/audios.html
+++ b/audios.html
@@ -386,7 +386,64 @@ audio {
             <source src="El milenio.mp3" type="audio/mpeg">
         </audio>
     </div>
+  <div class="audio-box">
+        <strong>Apocalipsis 18</strong>  
+        <audio controls>
+            <source src="APOCALIPSIS 18.mp3" type="audio/mpeg">
+        </audio>
+    </div>
 
+   <div class="audio-box">
+        <strong>El dia de mañana</strong>  
+        <audio controls>
+            <source src="El dia de mañana.mp4" type="audio/mpeg">
+        </audio>
+    </div>
+
+   <div class="audio-box">
+        <strong>Hebreos 4</strong>  
+        <audio controls>
+            <source src="Hebreos 4.mp4" type="audio/mpeg">
+        </audio>
+    </div>
+ <div class="audio-box">
+        <strong>Hebreos 3</strong>  
+        <audio controls>
+            <source src="Hebreos 3.mp4" type="audio/mpeg">
+        </audio>
+    </div>
+
+   <div class="audio-box">
+        <strong>Hebreos 2</strong>  
+        <audio controls>
+            <source src="Hebreos 2.mp4" type="audio/mpeg">
+        </audio>
+    </div>
+
+   <div class="audio-box">
+        <strong>Hebreos 1</strong>  
+        <audio controls>
+            <source src="Santiago 1.mp4" type="audio/mpeg">
+        </audio>
+    </div>
+ <div class="audio-box">
+        <strong>Santiago 2</strong>  
+        <audio controls>
+            <source src="Santiago 2.mp4" type="audio/mpeg">
+        </audio>
+ </div> <div class="audio-box">
+        <strong>Santiago 3</strong>  
+        <audio controls>
+            <source src="Santiago 3.mp4" type="audio/mpeg">
+        </audio>
+    </div> <div class="audio-box">
+        <strong>Santiago 4</strong>  
+        <audio controls>
+            <source src="Santiago 4.mp4" type="audio/mpeg">
+        </audio>
+    </div>
+
+ 
     <div class="volver">
         <a href="index.html">⬅ Volver al inicio</a>
     </div>
@@ -423,6 +480,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
