Update videos.html with additional video entries
Added more video sections and updated existing titles.

--- a/videos.html
+++ b/videos.html
@@ -129,6 +129,22 @@ footer {
         <video src="Corazon de niño.mp4" controls></video>
     </div>
    <div class="video-box">
+        <h2 class="section-title">📌Consejos</h2>
+        <video src="Consejos.mp4" controls></video>
+    </div>
+ <div class="video-box">
+        <h2 class="section-title">📌 Corrije atus hijos</h2>
+        <video src="Corrije atus hijos.mp4" controls></video>
+    </div>
+ <div class="video-box">
+        <h2 class="section-title">📌 El futbol</h2>
+        <video src="El futbol.mp4" controls></video>
+    </div>
+ <div class="video-box">
+        <h2 class="section-title">📌 Valora lo que Dios te dio</h2>
+        <video src="Valora lo que Dios te dio.mp4" controls></video>
+    </div>
+ <div class="video-box">
         <h2 class="section-title">📌 No disponible</h2>
         <video src="ejemplo.mp4" controls></video>
     </div>
@@ -153,6 +169,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
